dnl Process this file with autoconf to produce a configure script.
AC_INIT(fd2inline.c)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_AWK

AC_MSG_CHECKING(for AmigaOS FD files)
amigaos_inlines=amigaos_inlines
amigaos_fd_path='not found'
if test -d $prefix/os-lib/fd/amigaos; then
  amigaos_fd_path=$prefix/os-lib/fd/amigaos
elif test -f $prefix/os-lib/fd/exec_lib.fd; then
  amigaos_fd_path=$prefix/os-lib/fd
elif test -d /FD; then
  amigaos_fd_path=/FD
else
  amigaos_inlines=nop
fi
AC_MSG_RESULT($amigaos_fd_path)

amigaos_header_path='not found'
if test $amigaos_inlines != nop; then
  AC_MSG_CHECKING(for AmigaOS headers)
  if test -d $prefix/os-include/amigaos; then
    amigaos_header_path=$prefix/os-include/amigaos
  elif test -d $prefix/os-include/exec; then
    amigaos_header_path=$prefix/os-include
  else
    AC_MSG_ERROR(not found)
  fi
  AC_MSG_RESULT($amigaos_header_path)
else
  true
fi

AC_SUBST(amigaos_inlines)
AC_SUBST(amigaos_fd_path)
AC_SUBST(amigaos_header_path)

AC_OUTPUT(Makefile lib/Makefile)
